--- a/npcs/Basil_Dumas.yaml
+++ b/npcs/Basil_Dumas.yaml
@@ -474,8 +474,8 @@ npc:
       - The Curse: Humanoid Creatures he bites must make a constitution saving throw against DC 15 or become cursed with Lycanthrope
 
     special-abilities: 
-Feats: Keen Mind, Observant, Prodigy,  
-Legendary Resistance: (3/Day), If Basil Dumas fails a saving throw she can choose to succeed instead.
+    - Feats: Keen Mind, Observant, Prodigy,  
+    - Legendary Resistance: (3/Day), If Basil Dumas fails a saving throw she can choose to succeed instead.
 
     attacks: |
       3 Attacks - 1 Bite (1D8+str) and 2 Claws (2D4+str)
