--- a/npcs/Cador_Mckendric.yaml
+++ b/npcs/Cador_Mckendric.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Uha_Boomer_Bannock
+  id: cador_mckendric
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-04-24"
+  date: "2021-05-15"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Uha "Boomer" Bannock
+  name: Cador Mckendric
 
   #
   # The NPC artwork.
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: Young Adult
+    age: middle aged adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Viashino
+    race: Gnome
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: N/A
+    sub-race: Forest
 
     #
     # Pronouns (case insensitive):
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Dead Hunter
+    - Innkeeper
     
 
     #
@@ -239,7 +239,7 @@ npc:
     #
     # Required.
     #
-    class: Fighter/Artificer
+    class: Civilian
 
     #
     # D & D subclasses (case insensitive):
@@ -262,7 +262,7 @@ npc:
     #
     # Required.
     #
-    subclass: Gunslinger/Alchemist
+    subclass: N/A
 
     #
     # Class level.
@@ -271,7 +271,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 15/15
+    level: 0
 
     #
     # Alignments (case insensitive):
@@ -287,7 +287,7 @@ npc:
     #
     # Required.
     #
-    alignment: Chaotic Good
+    alignment: Lawful Good
 
     #
     # Alignment tendencies:
@@ -312,8 +312,9 @@ npc:
     #
     languages:
     - Common
-    - Goblin
-    - Draconic
+    - Gnomish
+    - Dwarvish
+
 
     #
     # Factions:
@@ -333,9 +334,9 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: The_Dead_Hunters
-      name: The Dead Hunters
-      role: Munitions Expert
+    - id: N/A
+      name: N/A
+      role: N/A
 
 
     #
@@ -344,9 +345,9 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Excitable
-    - Bold
-    - Hot-Tempered
+    - Welcoming
+    - Professional
+    - Intelligent
 
   improv:
 
@@ -361,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  The raptilian man barrels forward, diving to ground as he shouts "Fire in the Hole!" as the building behind explodes  
+    introduction:  A handsome gnome taps his pencil against his ledger. "Ay, another patron to please. How might we make your day better?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -372,7 +373,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Large and reptilian in a tailored vest and pants covered in pockets and bowler hat. Green scaled with a thick long tail 
+    appearance:   Short white hair rims a bald spot. Crisp, clean facial features. Monocle attached to collar. Bright tunic and pants.
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -388,7 +389,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "This one's gonna be big, boys", "Light em up!", "You're gonna want to move... like nowish, fella"
+    expressions:  "We aim to please!"; "Ledgers and lists make a pleasured guest!"; "Have ya seen the deeper wilds, friend? Lets hear!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -401,7 +402,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   cracks his knuckles and chews on match sticks
+    mannerisms:   Animated and jovial. Consistently keeping various lists and ledgers for inventory and duties. Books and pads everywhere
 
   acting:
     #
@@ -411,7 +412,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      exterminating the undead, blownig things up 
+      To reinvent hospitality. Provide food and lodging along with laundering and other services for adventurers
       
     #
     # Passions:
@@ -420,7 +421,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Fire
+      Full-service stop. Passionate that each person has a definite place in the world
       
     #
     # Vulnerabilities:
@@ -429,7 +430,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      quick to anger
+      N/A
       
     #
     # Secrets:
@@ -437,23 +438,23 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: |
-      Accidently killed his family when beginning his alchemy and is now trying to make up for it 
+    secrets: N/A
+       
       
   #
   # The D & D stats block:
   # All integers.
   #
   stats:
-    armour-class: 17
-    hit-points: 169
-    speed: 40
-    str: 18
-    dex: 22
-    con: 16
-    int: 23 
-    wis: 18
-    cha: 14
+    armour-class: 12
+    hit-points: 14
+    speed: 25
+    str: 12
+    dex: 12
+    con: 10
+    int: 16 
+    wis: 14
+    cha: 16
 
   #
   # Special characteristics.
@@ -464,90 +465,21 @@ npc:
   #
   specialties:
     skills:
-   - - Viashino Traits:
-        - Bite: can make an unarmed strike for 1d4+4 piercing damage
-        - Lashing Tail: Prehensile tail tipped with a bony blade. As a reaction, when a creature within 5 feet deals damage to him, he can make a melee attack dealing 1d6+4 slashing damage on a hit
-        - Wiry Frame: Proficient in Acrobatics and Stealth
-       
-   - - Fighter Abilities:
-        - Fighting Style: Archery
-        - Second Wind: Bonus Action to regain 1d10 + Fighter Level
-        - Action Surge: Once every short/long rest can take an extra action
-        - Extra Attack: Can attack twice each turn
-        - Indomitable: Can reroll 1 saving throw per long rest
- 
-   - - Gunslinger Traits: 
-        - Firearm Proficiency: Add proficiency to firearm attacks
-        - Gunsmith: Proficent with tinker's toolsand can use them to craft ammunition at half price, repair damaged firearms and design and craft new firearms
-        - Adept Marksman: 3 Grit, Trick Shot DC19
-        - Quickdraw: Adds proficiancy bonus to initiative. can stow and draw a firearm as a single object interaction
-        - Rapid Repair: Can spend one Grit Point to attempt to repair a misfired firearm as a bonus action
-        - Lightning Reload: Can reload a firearm as a bonus action
-        - Trick Shots: Deadeye Shot, Disarming Shot, Forceful Shot, Piercing Shot, Violent Shot    
-
-   - - Artificer Abilities:
-       - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-       - Dangerous Tinker: Proficiency with Tinker's Tools, can create clockwork divice with 1hr and 10gp worth of material - Arsonist's Friend, Blast Orb, Bomb Boy
-       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 19
-         Cantrip: Create Bonfire, Mage Hand, Fire Bolt, Message
-         1st Level: Absorb Elements, Faerie Fire, Identify, Disguise Self
-         2nd Level: Continual Flame, Heat Metal, Pyrotechnics
-         3rd Level: Haste, Flame Arrows, Flame Stride
-         4th Level: Elemental Bane
-       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,  
-       - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
-       - Tool Expertise: Smith's Tool proficiency bonus is doubled
-       - Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws
-       - Magic Item Adept: Crafting items of common or uncommon takes a quarter of the normal time and half the normal cost
-       - Spell Storing Item: Can store a spell in and object once per long rest
-       - Magic Item Savant: Can attune to any magic item regardless of class, race, spell and level requirements. Can attune to 5 magic items       
-      
-   - - Alchemist Abilities:
-       - Tool Proficiency: Proficiency with Tinker's Tools, Thieve's Tools and Alchemist's Supplies
-       - Spellcasting: Requires Alchemist Supplies as Spellcasting focus, Spell DC 19
-         3rd Level: Healing Word, Ray of Sickness
-         5th Level: Flaming Sphere, Melf's Acid Arrow
-         9th Level: Gaseous Form, Mass Healing Word
-         13th Level: Blight, Death Ward
-         15th Level: Cloudkill, Raise Dead
-       - Experimental Elixir: Can produce 3 experimantal elixirs per long rest, rolling on the experimantal elixir table for each elixir 
-       - Alchemical Savant: Whenever casting a spell using alchemical supplies as a focus, can add Intelligence Modifier bonus to either hit points restored or damage dealt  
-       - Restorative Reagents: Experimantal Elixirs also give 2d6+7 temporary HP. Can cast Lesser Restoration without expending a spell slot using Alchemists Supplies once per long rest
-       - Chemical Mastery: Resistance to Acid and Poison damage and immune to Poisoned condition. Can cast Greater Restoration and Heal without expending a spell slot using Alchemists Supplies once per long rest
+   - - Forest Gnome Abilities:
+       - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+       - Gnome Cunning: advantage on all Intelligence, Wisdom, and Charisma saves against magic
+       - Natural Illusionist:  knows the Minor Illusion cantrip. Intelligence is your spellcasting modifier for it
+       - Speak with Small Beasts: Through sound and gestures, you may communicate simple ideas with Small or smaller beasts
 
     special-abilities:
-    - Proficiencies: Athletics, Perception, Survival, Intimidation, Investigation,    
-    - Feats: Alert, Crossbow Expert, Dual Weilder, Gunner, Keen Mind, Lucky, Mobile, Sharpshooter, War Caster 
-    - Legendary Resistance: (3/Day), If Uha "Boomer" Bannock fails a saving throw he can choose to succeed instead 
-    - Legendary Actions: Uha "Boomer" Bannock can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                         Uha "Boomer" Bannock regains spent Legendary Actions at the start of his turn
-      - Explosive Alchemy: Uha "Boomer" Bannock can create and throw various explosive devices and elixirs
-      - Tail Grapple: Uha "Boomer" Bannock can make a grappling attack with his prehensile tail. Opponents must make a DC16 Strength Saving Throw or be grappled and restrained
-      - Alcemical Escape: Uha "Boomer" Bannock can ignite smoke grenades that an opaque cloud of smoke in a 30 foot radius that acts as a Fog Cloud spell for a 1 minute duration 
-    
+    - Proficiencies: Persuasion; Medecine; Insight; Perception    
     attacks: |
-      has 2 attacks
+      1 Unarmed Attacks
     combat-tactics: |
-      Loves a good fight, but he's more of a sneak in, do his job and sneak out kind of guy
+      He won't fight unless defending himselfand his family
     special-equipment:
-    - +2 Leather Armor
-    - Bag of Holding
-    - Tinker's Tools
-    - Alchemist's Supplies
-    - 2x Revolvers
-    - 50x Bullets
-    - 20x Explosive Bullets
-    - Grenade Launcher
-    - 5x Smoke Bombs - Works as a Fog Cloud spell with a 30 foot radius, plus 1d8 force damage to any creature with 5 feet of the detonation failing a Dex Save of DC15
-    - 5x Grenades - Works as a Fireball spell with DC15  
-    - 5x Timed Explosives - Works as a Delayed Blast Fireball spell with DC15 but can be set to go off at a specific time 
-    - 5x Shrapnel Grenades - Works as Conjure Barrage spell using fire damage DC15
-    - 5x Poison Gas Grenades - Works as Cloudkill Spell cast at 5th Level DC15, plus 1d8 force damage to any creature with 5 feet of the detonation failing a Dex Save of DC15
-    - 5x Flash Bang Grenades - Works as Blindness/Deafness spell but causes both blindness and deafness DC15, plus 1d8 force damage to any creature with 5 feet of the detonation failing a Dex Save of DC15
-    - 5x Oil Bomb - works as the Grease spell, plus 1d8 force damage to any creature with 5 feet of the detonation failing a Dex Save of DC15
-    - 5x Concussion Grenade - works as the Force Blast spell cast at 8th level. Creature who fail their Strength Savce are knocked prone
-
-    
+    - N/A
+                                                                   
   profile:
 
     #
@@ -558,11 +490,12 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Uha "Boomer" Bannock was enamored with fire at a very early age. Not an unusual thing for Viashino, but him moreso than most. Very early he began experimenting with combustibles and heading down the path of an alchemist. 
-      At the age of 12 one of his experiments went awry and burned down his house, killing his entire family, yet he managed to escape without a scratch. In an effort to atone for his fatal mistake he began to use his skills 
-      against beings that he considered evil. Monsters, fiends, undead. As an extension of his alchemical pursuits, he stumbled his was into discovering and mastering firearms. During a failed attempt to take out a den of 
-      ghouls, Boomer was found, being overwhelmed, by The Phantom, who saved his life and invited him to join his fledgling organization. Finding a new focus for his guilt, he happily joined The Dead Hunters and devoted his 
-      life to the gods of good and building towards his redemption.   
+      The very glee and dedication that characterize the Gnomish race is exemplified in Cador. His clan were always obsessed with tinkering and the creation of various gadgets for adventurers' utility, but Cador took this 
+      to a new level when he established his inn, "the One Stop". Here he has conjoined his love for respite with his natural proclivity for tinkering. With numerous 'washers' and 'drylines', he offers guests a laundry service 
+      for a nominal fee.He has also created what he calls the 'barstop' for his common room. This complex of tubes and steel resembles a 'Hooka' and allows visitors to choose a particular beverage of their choice and have it 
+      poured for them. All they need is the receptacle, which are offered in stacks beside the 'barstop'. Cador is currently working on something that will also clean his dish and glassware.Consistently showing off his 
+      innovations he is also open to help and feedback on them and on any ideas others might have for providing even better hospitable service to his guests.
+
       
     #
     # Personality (or something like that):
@@ -573,10 +506,7 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Uha "Boomer" Bannock is a large, scaly reptilian man with a protruding snout full of sharp teeth, yellow eyes, a long, thick prehensile tail with sharp scales and a serrated bone protrusion at the end.  He wears a tailored 
-      leather armored vest and pants full of pockets and pouches. He is as excitable and fiery as his weapon of choice. He's quick to anger, often to his detriment. He generally manages to keep his composure in the heat of 
-      battle against the Dead Hunter's quarries of choice, but dealing with regular people tends to brnig out the worst of him, and quickly. When it comes to his alchemical work and his explosives he is cool as a cucmber, 
-      attentive and diligent. Exceptionally detail oriented in his work, but there is still nothing he enjoys more than a good explosion. 
+      Short white hair rims a bald spot. Crisp, clean facial features. Monocle attached to collar. Bright tunic and pants 
   #
   # Content that does not get displayed, but could be useful
   # to humans.  Includes review comments, notes about what to
