--- a/npcs/The_Hooded_Man.yaml
+++ b/npcs/The_Hooded_Man.yaml
@@ -464,41 +464,41 @@ npc:
   #
   specialties:
     skills:
- - Fighter Abilities:
-    - Fighting Style: Two-Weapon Fighting
-    - Second Wind: Bonus Action to regain 1d10 + Fighter Level
-    - Action Surge: Once every short/long rest can take an extra action
-    - Extra Attack: Can attack twice each turn
-    - Indomitable: Can reroll 1 saving throw per long rest
+   - - Fighter Abilities:
+       - Fighting Style: Two-Weapon Fighting
+       - Second Wind: Bonus Action to regain 1d10 + Fighter Level
+       - Action Surge: Once every short/long rest can take an extra action
+       - Extra Attack: Can attack twice each turn
+       - Indomitable: Can reroll 1 saving throw per long rest
  
- - Battle Master Abilities:
-    - Combat Superiority:
-      - Maneuvers: Ambush, Brace, Menacing Attack, Pushing Attack, Sweeping Attack, Trip Attack
-      - Superiority Dice: 6
-      - Maneuver DC: 18
-    - Student of War: Smith's Tools
-    - Know Your Enemy: DM tells you if someone you have observed for 1 minute outside of combat is your equal
-    - Improves Superiority: Superiority are d10s
-    - Relentless: Regain superiority dice on initiative
+   - - Battle Master Abilities:
+       - Combat Superiority:
+         - Maneuvers: Ambush, Brace, Menacing Attack, Pushing Attack, Sweeping Attack, Trip Attack
+         - Superiority Dice: 6
+         - Maneuver DC: 18
+       - Student of War: Smith's Tools
+       - Know Your Enemy: DM tells you if someone you have observed for 1 minute outside of combat is your equal
+       - Improves Superiority: Superiority are d10s
+       - Relentless: Regain superiority dice on initiative
 
-- Reborn Abilities:
-    - Faded Memories: Has no memory of his previous life other than his love for Anastasia Dumas
-    - Darkvision: can see in dim light within 60ft.
-    - Deathless Nature: 
-      - Advantage on saving throws against disease and being poisoned and resistance to poison damage
-      - Advantage on Death saving throws     
-      - Doesn't need to eat, drink or breathe
-      - Doesn't need to sleep and uneffected by sleep magic. Long rest only takes 4 hours as long as inactive. Retains consciousness during long rest
-    - Knowledge from a Past Life: When making a an ability check that uses a skill, roll a d6 and add it to the check roll. Can use this a number of times equal to proficiency bonus each long rest      
+   - - Reborn Abilities:
+       - Faded Memories: Has no memory of his previous life other than his love for Anastasia Dumas
+       - Darkvision: can see in dim light within 60ft.
+       - Deathless Nature: 
+         - Advantage on saving throws against disease and being poisoned and resistance to poison damage
+         - Advantage on Death saving throws     
+         - Doesn't need to eat, drink or breathe
+         - Doesn't need to sleep and uneffected by sleep magic. Long rest only takes 4 hours as long as inactive. Retains consciousness during long rest
+       - Knowledge from a Past Life: When making a an ability check that uses a skill, roll a d6 and add it to the check roll. Can use this a number of times equal to proficiency bonus each long rest      
 
     special-abilities: 
-Feats: Dual Weilder, Heavy Armor Master, Shadow Touched: Invisibility and Darkness, Skulker, Slasher
-Legendary Resistance: (3/Day), If The Hooded Man fails a saving throw he can choose to succeed instead. The Hooded Man cannot be charmed. 
-Legendary Actions: The Hooded Man can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                   The Hooded Man regains spent Legendary Actions at the start of her turn
-Hoods Intimidation: The Hooded Man can moan, causing anyone with 10 feet to make a DC 15 wisdon saving throw or become afraid
-Hoods Escape: The Hooded Man casts Misty Step
-Hoods Rage: The Hooded Man can reroll one damage die and take the highest roll  
+       - Feats: Dual Weilder, Heavy Armor Master, Shadow Touched: Invisibility and Darkness, Skulker, Slasher
+       - Legendary Resistance: (3/Day), If The Hooded Man fails a saving throw he can choose to succeed instead. The Hooded Man cannot be charmed. 
+       - Legendary Actions: The Hooded Man can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+                            The Hooded Man regains spent Legendary Actions at the start of her turn
+         - Hoods Intimidation: The Hooded Man can moan, causing anyone with 10 feet to make a DC 15 wisdon saving throw or become afraid
+         - Hoods Escape: The Hooded Man casts Misty Step
+         - Hoods Rage: The Hooded Man can reroll one damage die and take the highest roll  
     attacks: |
       He will attack with both blades and use his maneuvers
     combat-tactics: |
