--- a/npcs/Ulther_Hapwath.yaml
+++ b/npcs/Ulther_Hapwath.yaml
@@ -467,39 +467,39 @@ npc:
   #
   specialties:
     skills:
-  - - Hybrid Abilities:
-      - Truesight - Berbalang Eye: Can see in magical Darkness, can see Invisibe things, Automatically saves against Illusions, Can see shapeshifter's true form and can see the Ethereal Plane
-      - Darkvision - Owl Eye: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-      - Manta Glide - Manta Wings: Subtract up to 100 feet when calculating fall damage. Can glide 2 feet horizontally for evey 1 foot of vertical drop  
-      - Nimble Climb - Spider Skin: Climbing speed of 30 feet
-      - Underwater Adaptaion - Shark Gills: Can breathe air and water. Swim speed
-      - Grappling Appendages - Squid Tentacles: 2 tentacles which can use an action to grapple a creature or can unarmed strike for 1d6+4 and can attempt to grapple immediately after hitting as a bonus action
-      - Carapace - Giant Crab Shell: +1 to AC
-      - Acid Spit - Ankheg Acid Pouches: Twice per long rest, Targets one creature within 30 feet, Target must make a Dex Saving Throw against DC15 or takes 3d10 Damage. 
-      - Poison Sting - Giant Scorpion Tail: A hit does 1d10+2 piercing damage. Then the target must make a DC15 Con Saving Throw or take 4d10 poison damage or half that on a successful save       
+   - - Hybrid Abilities:
+       - Truesight - Berbalang Eye: Can see in magical Darkness, can see Invisibe things, Automatically saves against Illusions, Can see shapeshifter's true form and can see the Ethereal Plane
+       - Darkvision - Owl Eye: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+       - Manta Glide - Manta Wings: Subtract up to 100 feet when calculating fall damage. Can glide 2 feet horizontally for evey 1 foot of vertical drop  
+       - Nimble Climb - Spider Skin: Climbing speed of 30 feet
+       - Underwater Adaptaion - Shark Gills: Can breathe air and water. Swim speed
+       - Grappling Appendages - Squid Tentacles: 2 tentacles which can use an action to grapple a creature or can unarmed strike for 1d6+4 and can attempt to grapple immediately after hitting as a bonus action
+       - Carapace - Giant Crab Shell: +1 to AC
+       - Acid Spit - Ankheg Acid Pouches: Twice per long rest, Targets one creature within 30 feet, Target must make a Dex Saving Throw against DC15 or takes 3d10 Damage. 
+       - Poison Sting - Giant Scorpion Tail: A hit does 1d10+2 piercing damage. Then the target must make a DC15 Con Saving Throw or take 4d10 poison damage or half that on a successful save       
  
-  - Wizard Abilities:
-    - Spellcasting: 
-        Cantrips: Chill Touch, Fire Bolt, Ray of Frost, Mage Hand, Minor Illusion
-        1st Level: Burning Hands, Disguise Self, Fog Cloud, Magic Missle
-        2nd Level: Acid Arrow, Alter Self, Web
-        3rd Level: Counterspell, Fireball, Gaseous Form
-        4th Level: Banishment, Black Tentacles, Polymorph
-        5th Level: Cloudkill, Conjure Elemental
-        6th Level: Flesh to Stone
-        7th Level: Reverse Gravity
+   - - Wizard Abilities:
+       - Spellcasting: 
+         Cantrips: Chill Touch, Fire Bolt, Ray of Frost, Mage Hand, Minor Illusion
+         1st Level: Burning Hands, Disguise Self, Fog Cloud, Magic Missle
+         2nd Level: Acid Arrow, Alter Self, Web
+         3rd Level: Counterspell, Fireball, Gaseous Form
+         4th Level: Banishment, Black Tentacles, Polymorph
+         5th Level: Cloudkill, Conjure Elemental
+         6th Level: Flesh to Stone
+         7th Level: Reverse Gravity
         
-    - Spellcasting Ability: 
-      - Ritual Casting: Can ritual cast and spell in spellbook with a ritual tag
-      - Arcane Recovery: After a short rest can recover combined spell slots up to 7
+   - - Spellcasting Ability: 
+       - Ritual Casting: Can ritual cast and spell in spellbook with a ritual tag
+       - Arcane Recovery: After a short rest can recover combined spell slots up to 7
 
-  - School of Transmutation Abilities: 
-      - Transmutation Savant: Gold and Time required to copy Transmutation spells is halved
-      - Minor Alchemy: For each 10 minutes spent performaing procedure, can transform 1 cubic foot of wood, stone, iron, copper or silver into a different one of those materials for 1 hour or concentration
-      - Transmuters Stone: Can spend 8hrs to create a transmuter's Stone which gives a creature: Darkvision, Increase speed of 10 feet, Proficiency on Constitution Saving Throws, or Resistance to acid, cold, 
-                           fire, lightning or thunder damage. The effect can be changed any time a transmutation spell is cast
-      - Shapechanger: Once per short rest can cast Polymorph on themselves changing into a beast with challenge rating 1 or lower
-      - Master Transmuter: Can use all enregy in a Transmuter's Stone to chose: Major Transformation, Panacea, Restore Life or Restore Youth      
+   - - School of Transmutation Abilities: 
+       - Transmutation Savant: Gold and Time required to copy Transmutation spells is halved
+       - Minor Alchemy: For each 10 minutes spent performaing procedure, can transform 1 cubic foot of wood, stone, iron, copper or silver into a different one of those materials for 1 hour or concentration
+       - Transmuters Stone: Can spend 8hrs to create a transmuter's Stone which gives a creature: Darkvision, Increase speed of 10 feet, Proficiency on Constitution Saving Throws, or Resistance to acid, cold, 
+                            fire, lightning or thunder damage. The effect can be changed any time a transmutation spell is cast
+       - Shapechanger: Once per short rest can cast Polymorph on themselves changing into a beast with challenge rating 1 or lower
+       - Master Transmuter: Can use all enregy in a Transmuter's Stone to chose: Major Transformation, Panacea, Restore Life or Restore Youth      
 
     special-abilities:
     - Proficiencies: Proficient in Survival, Arcana, Animal Handling and Pecerption with expertise in Nature and Medicine     
