--- a/npcs/Cedric_Wrath.yaml
+++ b/npcs/Cedric_Wrath.yaml
@@ -465,33 +465,40 @@ npc:
   #
   specialties:
     skills:
- -  - Cleric Abilities:
-    Spellcasting: 
-Cantrips: Guidance, Light, Sacred Flame, Spare the Dying, Shillelagh
-1st Level: Bane, Command, Detect Magic, Inflict Wounds
-2nd Level: Lesser Restoration, Hold Person, Spiritual Weapon
-3rd Level: Animate Dead, Speak with Dead, Clairvoyance
-4th Level: Banishment, Stone Shape
+  - - Cleric Abilities:
+        - Spellcasting: 
+           Cantrips: Guidance, Light, Sacred Flame, Spare the Dying, Shillelagh
+           1st Level: Bane, Command, Detect Magic, Inflict Wounds
+           2nd Level: Lesser Restoration, Hold Person, Spiritual Weapon
+           3rd Level: Animate Dead, Speak with Dead, Clairvoyance
+           4th Level: Banishment, Stone Shape
+        - Channel Divinity: Turn Undead, Destroy Undead 
 
-Channel Divinity: Turn Undead, Destroy Undead, Invoke Duplicity, Cloak of Shadows 
+  - - Trickery Domain Abilities:
+        - Blessing of the Trickster: Give another willing creature advantage on Stealth roles for an hour
+        - Invoke Duplicity: you can use your Channel Divinity to create an illusory duplicate of yourself. As an action, you create a perfect illusion of yourself that lasts for 1 minute, or until you lose your concentration 
+                            (as if you were concentrating on a spell). The illusion appears in an unoccupied space that you can see within 30 feet of you. As a bonus action on your turn, you can move the illusion up to 30 feet 
+                            to a space you can see, but it must remain within 120 feet of you. For the duration, you can cast spells as though you were in the illusion's space, but you must use your own senses. Additionally, 
+                            when both you and your illusion are within 5 feet of a creature that can see the illusion, you have advantage on attack rolls against that creature, given how distracting the illusion is to the target
+        - Cloak of Shadows: you can use your Channel Divinity to vanish. As an action, you become invisible until the end of your next turn. You become visible if you attack or cast a spell
+        - Divine Strike: Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8 poison damage to the target. When you reach 14th level, the extra damage increases to 
+                         2d8.        
+        - Spellcasting:
+           1st Level: Charm Person, Disguise Self
+           3rd Level: Mirror Image, Pass Without Trace
+           5th Level: Blink, Dispel Magic
+           7th Level: Dimension Door, Polymorph    
 
-- Trickery Domain Abilities: Blessing of the Trickster: Give another willing creature advantage on Stealth roles for an hour 
-  Spellcasting:
-1st Level: Charm Person, Disguise Self
-3rd Level: Mirror Image, Pass Without Trace
-5th Level: Blink, Dispel Magic
-7th Level: Dimension Door, Polymorph    
+    - special-abilities: 
+       - Feats: Actor, Inspiring Leader, Observant, Tavern Brawler, War Caster
 
-    special-abilities: 
-Feats: Actor, Inspiring Leader, Observant, Tavern Brawler, War Caster
-
-    attacks: |
-      His club using the Shillelagh cantrip 
-    combat-tactics: |
-      He will try to talk his way out of fights, but if provoked he's a brawler and will fight with his club, his fists and anything else at his disposal
-    special-equipment:
-    - +1 Greatclub
-    - Several different religious symbols
+     attacks: |
+       His club using the Shillelagh cantrip 
+     combat-tactics: |
+       He will try to talk his way out of fights, but if provoked he's a brawler and will fight with his club, his fists and anything else at his disposal
+     special-equipment:
+     - +1 Greatclub
+     - Several different religious symbols
     
     
   profile:
