--- a/npcs/Delores_Dumas.yaml
+++ b/npcs/Delores_Dumas.yaml
@@ -466,44 +466,59 @@ npc:
   #
   specialties:
     skills:
-    - Cleric Abilities:
-    Spellcasting: 
-Cantrips: Thaumaturgy, Primal Savagery, Prestidigitation, Mind Sliver, Toll of the Dead
-1st Level: Arms of Hadar, Bane, Faerie Fire, Sleep, Id Insinuation
-2nd Level: Augury, Tasha's Mind Whip, Mind Spike
-3rd Level: Counterspell, Hunger of Hadar, Psionic Blast
-4th Level: Compulsion, Confusion, Divination
-5th Level: Scrying, Synaptic Static, Temporal Shunt
-6th Level: Psychic Crush, Otto's Irresistible Dance
-7th Level: Forcecage, Create Undead
-8th Level: Reality Break
-9th Level: Psychic Scream
-Channel Divinity: Turn Undead, Destroy Undead 
-Divine Intervention: Can call her patron to intervene on her behalf
+   - - Cleric Abilities:
+      - Spellcasting: 
+         Cantrips: Thaumaturgy, Primal Savagery, Prestidigitation, Mind Sliver, Toll of the Dead
+         1st Level: Arms of Hadar, Bane, Faerie Fire, Sleep, Id Insinuation
+         2nd Level: Augury, Tasha's Mind Whip, Mind Spike
+         3rd Level: Counterspell, Hunger of Hadar, Psionic Blast
+         4th Level: Compulsion, Confusion, Divination
+         5th Level: Scrying, Synaptic Static, Temporal Shunt
+         6th Level: Psychic Crush, Otto's Irresistible Dance
+         7th Level: Forcecage, Create Undead
+         8th Level: Reality Break
+         9th Level: Psychic Scream
+      - Channel Divinity: Turn Undead, Destroy Undead 
+      - Divine Intervention: Can call her patron to intervene on her behalf
 
-- Madness Domain Abilities: Divine Hallucinations, Gift of Madness, Dread Whispers, Crazed Stumbling, Potent Spellcasting, Already Mad 
-  Spellcasting:
-Cantrips: Vicious Mockery
-1st Level: Dissonant Whispers, Tasha's Hideous Laughter
-3rd Level: Crown of Madness, Phantasmal Force
-5th Level: Fear, Incite Self-Harm
-7th Level: Phantasmal Killer, Staggering Smite
-9th Level: Modify Memory, Phantasmal Plunge
+   - - Madness Domain Abilities: 
+       - Divine Hallucinations: you can use an action to enter a catatonic trance to receive warnings from your god via hallucination. You become incapacitated for 1 minute as you experience a vivid hallucination that might be 
+                                prophetic. The DM rolls a d6 in secret. On a roll of a 5 or 6, the DM shows you a likely future involving a real threat you're likely to face soon. On any other roll the DM shows you a paranoid 
+                                vision of an unlikely future involving threats that are not real or that you're unlikely to face, such as a betrayal from allies that are actually trustworthy, or an attack from monsters that 
+                                aren't actually present in the immediate area. You can enter this trance a number of times equal to your cleric level divided by 4 (a minimum of once). 
+       - Gift of Madness: level you also learn how to ward off attackers by sharing your madness with them. Immediately after a creature hits you with a melee attack, you can use your reaction to assault it with hallucinations. 
+                          The creature must make a Wisdom saving throw. On a failed saving throw, it takes psychic damage equal to 2 + half your cleric level and the hallucinations make it either blinded or deafened (your choice)
+                          and frightened of you until the end of your next turn. You can use this reaction ability a number of times equal to your Wisdom modifier (a minimum of once).
+       - Dread Whispers: you can use your Channel Divinity to infuse the creatures in an area with paranoid dread and maddening whispers warning them of betrayal As an action, you choose a point that you can see within 60 feet. 
+                         Each creature in a 10 foot sphere centered on that point must make a Wisdom saving throw. On a failed saving throw, a creature takes psychic damage equal to ld6 + half your cleric level and it becomes 
+                         addled with dread for 1 minute. A creature addled with this dread treats all other creatures as enemies for the purpose of disadvantage for ranged attacks, and must make any opportunity attack it 
+                         possibly can. At the end of an affected creature's turn, it repeats the saving throw. A success ends the effect on that creature.
+       - Crazed Stumbling: when you deal psychic damage to a creature you can cause it to stagger with fear and confusion. You can choose to push it up to 10 feet in any direction that it can move, but you cannot move it further
+                           than half its speed
+       - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip.
+       - Already Mad: you cannot be charmed or frightened and you have immunity to psychic damage.
+       - Spellcasting:
+          Cantrips: Vicious Mockery
+          1st Level: Dissonant Whispers, Tasha's Hideous Laughter
+          3rd Level: Crown of Madness, Phantasmal Force
+          5th Level: Fear, Incite Self-Harm
+          7th Level: Phantasmal Killer, Staggering Smite
+          9th Level: Modify Memory, Phantasmal Plunge
 
     special-abilities: 
-Feats: Indefinite Madness, Contortionist, Eldritch Adept, 
-Legendary Resistance: (3/Day), If Delores Dumas fails a saving throw she can choose to succeed instead. Delores is completely immune to Psychic Damage and Charms 
-Legendary Actions: Delores Dumas can take 3 Legendary Actions. Randomly choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Delores Dumas 
+    - Feats: Indefinite Madness, Contortionist, Eldritch Adept, 
+    - Legendary Resistance: (3/Day), If Delores Dumas fails a saving throw she can choose to succeed instead. Delores is completely immune to Psychic Damage and Charms 
+    - Legendary Actions: Delores Dumas can take 3 Legendary Actions. Randomly choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Delores Dumas 
                    regains spent Legendary Actions at the start of her turn
-Devils Portal: Delores Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-Touch of Madness: Delores Dumas touch one person within range and the must make a wisdom savign throw equal to her spellcasting DC or roles two results on the Short-Term Madness Table lasting until the end of their next turn
-Devils Children: Delores Dumas can cast Gate, opening a portal to summon up to 5 lesser devils
+      - Devils Portal: Delores Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+      - Touch of Madness: Delores Dumas touch one person within range and the must make a wisdom savign throw equal to her spellcasting DC or roles two results on the Short-Term Madness Table lasting until the end of their next turn
+      - Devils Children: Delores Dumas can cast Gate, opening a portal to summon up to 5 lesser devils
     attacks: |
       Various psychic spell attacks
     combat-tactics: |
       Delores has no real combat strategy and generally just responds randomly to outside stimuli
     special-equipment:
-    - Dimensional Shackles - These function as the dimensional shackles from the DMG but also function as her arcane focus allowing her to spellcast without and other components
+    - Dimensional Shackles - These function as the dimensional shackles from the DMG but also function as her arcane focus allowing her to spellcast without any other components
     
   profile:
 
