--- a/npcs/Irini_Dumas.yaml
+++ b/npcs/Irini_Dumas.yaml
@@ -463,39 +463,54 @@ npc:
   #
   specialties:
     skills:
- - Cleric Abilities:
-    Spellcasting: 
-Cantrips: Guidance, Light, Resistance, Sacred Flame, Thaumaturgy
-1st Level: Bane, Command, Destroy Water, Inflict Wounds
-2nd Level: Zone of Truth, Hold Person, Spiritual Weapon
-3rd Level: Bestow Curse, Speak with Dead, Dispel Magic
-4th Level: Banishment, Locate Creature, Control Water
-5th Level: Raise Dead, Insect Plague, Dispel Good
-6th Level: Create Undead, Harm
-7th Level: Fire Storm, Plane Shift
-8th Level: Anti-magic Field
-9th Level: Astral Projection
-Channel Divinity: Turn Undead, Destroy Undead 
-Divine Intervention: Can call her patron to intervene on her behalf
+   - - Half-Devil Abilities: 
+       - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+       - Hellish Ancestry: You are resistant to fire damage.
+       - Art of the Word: You are proficient in the Persuasion skill
+       - Bewitching Words: Can cast Mass Charm once per long rest using Charisma as spellcasting DC
+       
+   - - Cleric Abilities:
+       - Spellcasting: DC 20
+          Cantrips: Guidance, Light, Resistance, Sacred Flame, Thaumaturgy
+          1st Level: Bane, Command, Destroy Water, Inflict Wounds
+          2nd Level: Zone of Truth, Hold Person, Spiritual Weapon
+          3rd Level: Bestow Curse, Speak with Dead, Dispel Magic
+          4th Level: Banishment, Locate Creature, Control Water
+          5th Level: Raise Dead, Insect Plague, Dispel Good
+          6th Level: Create Undead, Harm
+          7th Level: Fire Storm, Plane Shift
+          8th Level: Anti-magic Field
+          9th Level: Astral Projection
+       - Channel Divinity: Turn Undead, Destroy Undead 
+       - Divine Intervention: Can call her patron to intervene on her behalf
 
-- Death Domain Abilities: Proficient with Knives and Torture Implements, Reaper, Touch of Death, Inescapable Destruction, Divine Strike, Improved Reaper 
-  Spellcasting:
-Cantrips: Toll The Dead
-1st Level: False Life, Ray of Sickness
-3rd Level: Blindness/Deafness, Ray of Enfeeblement
-5th Level: Animate Dead, Vampiric Touch
-7th Level: Blight, Death Ward
-9th Level: Antilife Shell, Cloudkill
+   - - Death Domain Abilities: Proficient with Knives and Torture Implements, 
+       - Reaper: you learn one necromancy cantrip of your choice from any spell list. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures 
+                 within range and within 5 feet of each other
+       - Touch of Death: you can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage to the target. 
+                         The damage equals 5 + twice your cleric level
+       - Inescapable Destruction: your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage
+       - Divine Strike: you gain the ability to infuse your weapon strikes with necrotic energy. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an a 1d8 necrotic 
+                        damage to the target. When you reach 14th level, the extra damage increases to 2d8
+       - Improved Reaper: when you cast a necromancy spell of 1st through 5th level that targets only one creature, the spell can instead target two creatures within range and within 5 feet of each other. If the spell 
+                          consumes its material components, you must provide them for each target.
+       - Spellcasting:
+          Cantrips: Toll The Dead
+          1st Level: False Life, Ray of Sickness
+          3rd Level: Blindness/Deafness, Ray of Enfeeblement
+          5th Level: Animate Dead, Vampiric Touch
+          7th Level: Blight, Death Ward
+          9th Level: Antilife Shell, Cloudkill
 
-- Half-Devil Abilities: Darkvision, Fire Resistant, Proficient in Persuasion, Can cast Mass Charm once per long rest using Charisma as her spellcasting DC
+       
     special-abilities: 
-Feats: Actor, Inspiring Leader, Observant, War Caster, Shadow Touched (Invisibility and Cause Fear)
-Legendary Resistance: (3/Day), If Irini Dumas fails a saving throw she can choose to succeed instead 
-Legendary Actions: Irini Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                   Irini Dumas regains spent Legendary Actions at the start of her turn
-Devils Portal: Irini Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-Devils Tongue: Irini Dumas casts Charm Person using Charisma as her spellcasting DC
-Devils Children: Irini Dumas can cast Gate, opening a portal to summon up to 5 lesser devils and/or minor undead to join the fight     
+    - Feats: Actor, Inspiring Leader, Observant, War Caster, Shadow Touched (Invisibility and Cause Fear)
+    - Legendary Resistance: (3/Day), If Irini Dumas fails a saving throw she can choose to succeed instead 
+    - Legendary Actions: Irini Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+                         Irini Dumas regains spent Legendary Actions at the start of her turn
+      - Devils Portal: Irini Dumas can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+      - Devils Tongue: Irini Dumas casts Charm Person using Charisma as her spellcasting DC
+      - Devils Children: Irini Dumas can cast Gate, opening a portal to summon up to 5 lesser devils and/or minor undead to join the fight     
     attacks: |
       Spellcasting
       Legendary Actions
