--- a/npcs/Silas_Urthodon.yaml
+++ b/npcs/Silas_Urthodon.yaml
@@ -465,24 +465,23 @@ npc:
   #
   specialties:
     skills:
- - Drow Abilities:
-    - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-    - Keen Senses: Proficiency in Perception
-    - Fey Ancestry: Advantage on saving throws against charm and immune to sleep magic
-    - Trance: Deasn't need to sleep, 4 hours meditation counts as a long rest
-    - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-    - Drow Magic: Can cast Dancing Lights, Faerie Fire, Darkness, Detect Magic, Dispel Magic and Levitate once per long rest with charisma as spellcasting ability
-    - Drow Weapons Training: Proficient with rapiers, shortswords and hand crossbow
+   - - Drow Abilities:
+       - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
+       - Keen Senses: Proficiency in Perception
+       - Fey Ancestry: Advantage on saving throws against charm and immune to sleep magic
+       - Trance: Deasn't need to sleep, 4 hours meditation counts as a long rest
+       - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
+       - Drow Magic: Can cast Dancing Lights, Faerie Fire, Darkness, Detect Magic, Dispel Magic and Levitate once per long rest with charisma as spellcasting ability
+       - Drow Weapons Training: Proficient with rapiers, shortswords and hand crossbow
     
-
-- Undertaker Abilities: 
-    - Skill Proficiencies: Medicine, Religion: Burial Rites, Investigation, History: Burial Rites, Insight,
-    - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
-    - Funeral Network: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
-    - Coroner: Has advantage when trying to determine cause and/or time of death    
+   - - Undertaker Abilities: 
+       - Skill Proficiencies: Medicine, Religion: Burial Rites, Investigation, History: Burial Rites, Insight,
+       - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
+       - Funeral Network: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
+       - Coroner: Has advantage when trying to determine cause and/or time of death    
 
     special-abilities: 
-Feats: Elven Acuracy, Actor, Crossbow Expert, Healer, Keen Mind, Drow High Magic
+    - Feats: Elven Acuracy, Actor, Crossbow Expert, Healer, Keen Mind, Drow High Magic
 
     attacks: |
       Hand Crossbow at range or rapier cane in melee range 
