--- a/npcs/Thomdrick_Holecarver.yaml
+++ b/npcs/Thomdrick_Holecarver.yaml
@@ -465,20 +465,19 @@ npc:
   #
   specialties:
     skills:
- - Duergar Abilities:
-    - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-    - Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
-    - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-    - Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
-    - Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
+   - - Duergar Abilities:
+       - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
+       - Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
+       - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
+       - Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
+       - Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
     
-
-- Undertaker Abilities: 
-    - Skill Proficiencies: Medicine, Religion: Burial Rites, History: Burial Rites
-    - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Sewnig Kit    
+   - - Undertaker Abilities: 
+       - Skill Proficiencies: Medicine, Religion: Burial Rites, History: Burial Rites
+       - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Sewnig Kit    
 
     special-abilities: 
-Feats: Tavern Brawler, Crusher, Slasher, Grappler
+    - Feats: Tavern Brawler, Crusher, Slasher, Grappler
 
     attacks: |
       Hand Crossbow at range or shovel in melee range 
